<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/buttonNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNavigationView"
        app:layout_constraintTop_toTopOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#90000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader" />

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/app_name"
        android:padding="7dp"
        android:src="@drawable/menu"
        app:tint="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/menu_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_your_trip"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:id="@+id/BookYourTrip"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/imageMenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_backgroud"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/BookYourTrip">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            tools:ignore="Autofill"/>

    </LinearLayout>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cardBus"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/White">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                tools:ignore="UseCompoundDrawables">
                
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/train"
                    android:padding="32dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/train"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBus"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/White"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@id/cardTrain"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bus"
                android:padding="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bus"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAirplane"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/White"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cardHotel"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTrain"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/travel"
                android:padding="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/air_plane"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHotel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/White"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@id/cardAirplane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardBus"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/hotel"
                android:padding="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hotel"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>